# docs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LOCALIZATION_INSTRUCTIONS.md  README.md  analyze_terms.js  check_translations.js  find_direct.js  find_untranslated.js  package-lock.json  package.json  pnpm-lock.yaml  update_translations.js
.codex/skills/translate-typst-docs/: SKILL.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: review_translation.yml
crates/translate/: Cargo.toml
crates/translate/src/: lib.rs  main.rs
crates/typst-docs-l10n/: Cargo.toml
crates/typst-docs-l10n/src/: convert.rs  generate.rs  lib.rs  main.rs  markdown.rs  split.rs  template.typ  translate.rs
docs/: terms.toml  translation-principle.md
locales/docs/: typst-docs.toml
locales/docs/typst-docs/: guides.guide-for-latex-users.body.toml  guides.guide-for-latex-users.toml  guides.page-setup-guide.body.toml  guides.page-setup-guide.toml  guides.table-guide.body.toml  guides.table-guide.toml  reference.context.body.toml  reference.context.toml  reference.data-loading.json.json.details.toml  reference.data-loading.json.json.toml  reference.data-loading.xml.xml.details.toml  reference.data-loading.xml.xml.toml  reference.data-loading.yaml.yaml.details.toml  reference.data-loading.yaml.yaml.toml  reference.foundations.arguments.arguments.details.toml  reference.foundations.arguments.arguments.toml  reference.foundations.array.array.details.toml  reference.foundations.array.array.toml  reference.foundations.bytes.bytes.details.toml  reference.foundations.bytes.bytes.toml  reference.foundations.calc.calc.round.details.toml  reference.foundations.calc.calc.round.toml  reference.foundations.content.content.details.toml  reference.foundations.content.content.toml  reference.foundations.datetime.datetime.details.toml  reference.foundations.datetime.datetime.toml  reference.foundations.decimal.decimal.details.toml  reference.foundations.decimal.decimal.toml  reference.foundations.dictionary.dictionary.details.toml  reference.foundations.dictionary.dictionary.toml  reference.foundations.function.function.details.toml  reference.foundations.function.function.toml  reference.foundations.int.int.details.toml  reference.foundations.int.int.toml  reference.foundations.label.label.details.toml  reference.foundations.label.label.toml  reference.foundations.plugin.plugin.details.toml  reference.foundations.plugin.plugin.toml  reference.foundations.plugin.plugin.transition.details.toml  reference.foundations.plugin.plugin.transition.toml  (+132 more)
openspec/changes/archive/2026-03-14-create-skill-to-translate-typst-docs/: proposal.md  tasks.md
openspec/changes/create-skill-to-translate-typst-docs/: design.md  tasks.md
openspec/changes/first-iteration-of-translation-by-codex/: design.md  proposal.md  tasks.md
openspec/changes/first-iteration-of-translation-by-codex/specs/translation-contributor-guidance/: spec.md
openspec/changes/first-iteration-of-translation-by-codex/specs/translation-review-skill/: spec.md
openspec/changes/translate-articles/: design.md  proposal.md  tasks.md
openspec/changes/translate-articles/specs/translation-status-helper/: spec.md
openspec/specs/translation-review-skill/: spec.md
openspec/specs/translation-status-helper/: spec.md
scripts/: check_translations.js  docs-types.d.ts  main.js  types.mjs
tools/editor/: index.html  package.json  pnpm-lock.yaml  vite.config.mjs
tools/editor/src/: TranslationNode.ts  convert.ts  main.ts
(+2 files in other folders)
